Cambios => variables.env | index

--- a/variables.env
+++ b/variables.env
@@ -1,8 +1,9 @@
-BD_NOMBRE = cristian_webpage
-BD_USER = root
-BD_PASS = 
-BD_HOST = 127.0.0.1
+BD_NOMBRE = heroku_76617649fb53124
+BD_USER = b6c44cc2fff23b
+BD_PASS = 8f05a77c
+BD_HOST = us-cdbr-iron-east-05.cleardb.net
 BD_PORT = 3306
 
 PORT = 5000
 HOST = localhost
+
