Cambios => Se valida el form de contacto

--- a/variables.env
+++ b/variables.env
@@ -3,3 +3,5 @@ BD_USER = b6c44cc2fff23b
 BD_PASS = 8f05a77c
 BD_HOST = us-cdbr-iron-east-05.cleardb.net
 BD_PORT = 3306
+USER_EMAIL = cristianhz1109@gmail.com
+PASS_EMAIL = 3138655266hz
