--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.2.0",
+    "express-validator": "^6.3.0",
     "mysql2": "^2.0.1",
+    "nodemailer": "^6.3.1",
     "nodemon": "^2.0.1",
     "pug": "^2.0.4",
     "sequelize": "^5.21.2"
