--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "mailgun-js": "^0.22.0",
     "mysql2": "^2.0.1",
     "nodemailer": "^6.3.1",
     "nodemon": "^2.0.1",
